<resources>
    <string name="app_name">ContractConnection</string>
    <string name="action_settings">Settings</string>
    <string name="navigation_drawer_open">Open</string>
    <string name="navigation_drawer_close">Close</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="menu_home">Home</string>
    <string name="menu_account">My Account</string>
    <string name="menu_contracts">My Contracts</string>
    <string name="menu_services">My Services</string>
    <string name="menu_money_services">Money Services</string>
    <string name="menu_contact_us">Contact Us</string>
    <string name="menu_help">Help</string>
    <string name="menu_logout">Logout</string>

    <string name="tab_contracts">Contracts</string>
    <string name="tab_services">Services</string>
    <string name="tab_saved">Saved</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_register">Register</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">Login Failed! Please try again!</string>

    <string name="register_fname">First Name:</string>
    <string name="register_lname">Last Name:</string>
    <string name="register_address">Address:</string>
    <string name="register_phone">Phone:</string>
    <string name="register_availability">Availability:</string>
    <string name="register_qualifications">Qualifications:</string>
    <string name="register_services_offered">Services Offered:</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="contracts_frag">Hello Contracts fragment</string>
    <string name="services_frag">Hello Services fragment</string>
    <string name="saved_frag">Hello Saved fragment</string>
</resources>
